--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,19 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="style.css">
+    
   </head>
 </html>
 <body>
   <main>
-    <div id='map'></div>
-    <script src="map.js"></script>
+    <div class='lot-info'>
+      <div><strong>Name:</strong> <span id='name'></span></div>
+      <div><strong>Spots Remaining:</strong> <span id='spots'></span></div>
+      <div><strong>Capacity:</strong> <span id='capacity'></span></div>
+    </div>
+    <div>
+      <div id='map'></div>
+      <script src="map.js"></script>
+    </div>
   </main>
 </body>
