--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 </html>
 <body>
